--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,1 +1,5 @@
-$main-color: #0053b3;
+$main-color: #07c434;//#0053b3;
+$dark-color: #016c1e;
+$light-color: #c2d7c8;
+
+$input-border: .1em solid $dark-color;
