tslint and tslint-react

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,8 +1,21 @@
 body,
-div, p, ul, ol,
-h1, h2, h3, h4, h5, h6,
-dl, dd, dt,
-input, select, option, button {
+div,
+p,
+ul,
+ol,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+dl,
+dd,
+dt,
+input,
+select,
+option,
+button {
   margin: 0;
   padding: 0;
 }
