--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -6,7 +6,7 @@
   width: 100%;
   border: $input-border;
   border-radius: 0.5em;
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   outline: none;
   box-sizing: border-box;
   font-family: inherit;
