--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -2,7 +2,7 @@
   background-color: $main-color;
   color: #fff;
   padding: 1em 2em;
-  box-shadow: 0 0 .2em .2em rgba(0, 0, 0, .2);
+  box-shadow: 0 0 0.2em 0.2em rgba(0, 0, 0, 0.2);
 }
 
 .app-logo {
@@ -26,7 +26,7 @@
 
 .app-footer {
   padding: 1em 2em;
-  box-shadow: 0 0 .2em .2em rgba(0, 0, 0, .2);
+  box-shadow: 0 0 0.2em 0.2em rgba(0, 0, 0, 0.2);
   background-color: #eee;
   position: fixed;
   left: 0;
