--- a/src/pages/Regions/Regions.scss
+++ b/src/pages/Regions/Regions.scss
@@ -3,10 +3,10 @@
 
   select {
     font-family: inherit;
-    font-size: .9em;
-    border-radius: .2em;
+    font-size: 0.9em;
+    border-radius: 0.2em;
     border: $input-border;
-    padding: .5em 1em;
+    padding: 0.5em 1em;
     font-weight: bold;
     background-color: $light-color;
     min-width: 20em;
@@ -18,5 +18,5 @@
 }
 
 .city-item {
-  margin: 0 0 .5em;
+  margin: 0 0 0.5em;
 }
