--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -18,7 +18,7 @@
 
 .page-content {
   max-width: 33em;
-  margin: 2em auto;
+  margin: 2em auto 6em;
   padding: 0 1em;
   position: relative;
   z-index: 0;
