--- a/src/pages/City/City.scss
+++ b/src/pages/City/City.scss
@@ -1,7 +1,3 @@
-// .city-detail {
-
-// }
-
 .city-header {
   margin: 0 0 2em;
 }
@@ -11,14 +7,16 @@
   border-radius: 0.5em;
   padding: 2em;
 
+  dd {
+    margin: 0 0 0.5em;
+    font-weight: bold;
+  }
+}
+
+@media (min-width: 410px) {
   dt {
     float: left;
     clear: left;
     width: 30%;
-  }
-
-  dd {
-    margin: 0 0 0.5em;
-    font-weight: bold;
   }
 }
